# vcdive

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
inputs/: p3_cpu.vcd  p3_cpu_vpd.vcd
public/workers/: CycleWorker.js
src/: parser.py
src/app/: globals.css  home.css  layout.tsx  page.tsx
src/app/(home)/: home.css  layout.tsx  page.tsx
src/app/debugger/: layout.tsx  page.tsx
src/components/: CycleNavigation.tsx  DebuggerHeader.css  DebuggerHeader.tsx  FileCaen.tsx  FileLocal.tsx  FileUpload.tsx  MethodTabs.css  MethodTabs.tsx  NSToggle.tsx  ParseButton.tsx  RegisterFile.css  RegisterFile.tsx  Section.css  Section.tsx  TagTrackProvider.tsx  ThemeToggle.tsx
src/components/processor_components/: BranchGshare.tsx  Brat.tsx  CoreMemBus.tsx  Dcache.tsx  Decoder.tsx  Fetch.tsx  FileFetch.tsx  FunctionalUnits.tsx  Icache.tsx  InstructionQueue.tsx  LoadStore.tsx  MapTable.tsx  PRF_ReadyList.tsx  PRF_Ready_Free.tsx  PhysicalRegisterFile.tsx  RAS.tsx  ReadyList.tsx  ReorderBuffer.tsx  ReservationStation.tsx  Section.css  Section.tsx  Terminal.tsx  TerminalDialog.tsx
src/lib/: utils.ts
src/parse/: CMakeLists.txt  connect_caen.py  main.py  parser.cpp  parser.py  requirements.txt  setup.py
src/utils/: cookies.tsx
